--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>OSGi - Rappels et pratiques de développement</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -24,8 +24,98 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+			
+				<section data-markdown>
+					<script type="text/template">
+						# OSGi - Rappels et pratiques de développement
+					</script>
+				</section>
+				
+				<section data-markdown>
+					<script type="text/template">
+						# Plan
+
+						* OSGi ?
+						* ServiceMix ?
+						* Architecture CanalTrain 2
+						  * Architecture logique
+						  * Architecture technique
+						  * Organisation des composants
+						* Versioning OSGi
+
+					</script>
+				</section>
+				<section>
+					<h2>OSGI ?</h2>
+					<section data-markdown>
+						<script type="text/template">
+							* OSGi est une spécification
+							* Programmation orientée composants (= appelés bundles)
+							* Repose sur un framework OSGi
+							* Embarqué dans dans un conteneur OSGi
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							* Chaque bundle a son propre cycle de vie
+							* Chaque bundle peut dynamiquement être démarré, arrêté, stoppé
+							* Chaque bundle contient un MANIFEST, qui est sa carte d'identité au sein du framework OSGi
+							```
+							Bundle-Name: Hello World
+							Bundle-SymbolicName: org.sopra.projetbidon
+							Bundle-Description: Je suis un bundle qui ne sert à rien. D'ailleurs, cette description ne sert à rien.
+							Bundle-ManifestVersion: 2
+							Bundle-Version: 1.0.0
+							Bundle-Activator: org.sopa.Activator
+							Export-Package: org.sopra.helloworld;version="1.0.0"
+							Import-Package: org.osgi.framework;version="1.3.0"
+							```
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							* Par défaut, tout code implémenté dans un bundle n'est accessible qu'à l'intérieur de ce bundle
+							* L'exposition d'une méthode se fait en déclarant des services
+							* Un service est défini par une interface, pas par une classe !
+							* Un bundle exposant un service doit exposer et versioner le package le contenant dans le MANIFEST'
+						</script>
+					</section>
+				</section>
+
+				<section>
+					<h2>ServiceMix ?</h2>
+					<section data-markdown>
+						<script type="text/template">
+							Plateforme de développement embarquant :
+							* Karaf
+							* Camel
+							* CXF
+							* ActiveMQ
+						</script>
+					</section>
+					<section>
+						<br/>
+						<h3>Karaf</h3>
+						<section data-markdown>
+							<script type="text/template">
+								Karaf est un conteneur OSGi embarquant :
+								* Un framework OSGi (Apache Felix)
+								* Une console de monitoring
+								* Pleins d'autres trucs'
+							</script>
+						</section>
+					</section>
+					<section>
+						<br/>
+						<h3>Camel</h3>
+						<section data-markdown>
+							<script type="text/template">
+								Camel est un framework d'implémentation des EIP.
+								![](images/eip_book_cover.gif)
+							</script>
+						</section>
+					</section>
+				</section>
 			</div>
 		</div>
 
